# pianova

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  first.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_initial_schema.py  20260714_0002_unique_artifact_kind.py  20260716_0003_media_inspection.py  20260716_0004_transcription_provenance.py  20260716_0005_symbolic_timing.py  20260716_0006_hand_staff_interpretation.py  20260718_0007_voice_separation_state.py  20260719_0008_pitch_spelling_state.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: capabilities.py  config.py  dependencies.py  errors.py  logging.py  middleware.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: projects.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  interpretation.py  media.py  projects.py  quantization.py  spelling.py  spelling_state.py  stage_runner.py  storage.py  transcription.py  voices.py
backend/app/symbolic/: __init__.py  interpretation.py  spelling.py  timing.py  voices.py
backend/app/transcription/: __init__.py  contracts.py  worker.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_failure_paths.py  test_spelling_persistence.py  test_stage_runner.py  test_symbolic_interpretation.py  test_symbolic_spelling.py  test_symbolic_timing.py  test_symbolic_voices.py  test_voice_persistence.py
docs/: CURRENT_TASK.md  (+13 more)
(+14 files in other folders)
