[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "pianova-backend"
version = "0.1.0"
description = "Local-first Pianova API and processing foundation"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "filetype==1.2.0",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.7",
]
transcription = [
  "basic-pitch==0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
